# xwm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  main.cpp
include/: config.def.h  config.h  drw.h  dwm.h  util.h
src/: drw.cpp  dwm.cpp
